--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-icons/all-files": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "split-type": "^0.3.4",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
